[gd_scene load_steps=11 format=2]

[ext_resource path="res://Enemies/Hourglass.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Hourglass.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 320.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Spin"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 0.5, 2, 0.5, 2, 1 ),
"update": 0,
"values": [ 0.0, 60.0, 0.0, -60.0, 0.0 ]
}

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0.656, 1 )
colors = PoolColorArray( 1, 0.992157, 0.866667, 1, 1, 0.992157, 0.866667, 0 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=4]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 128.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -16.0
scale = 2.0
color = Color( 1, 0.992157, 0.866667, 1 )
color_ramp = SubResource( 6 )

[sub_resource type="Animation" id=7]
resource_name = "Phase"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.2 ),
"transitions": PoolRealArray( -2, -2, -2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.8 ), Color( 1, 1, 1, 0.4 ), Color( 1, 1, 1, 0.8 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="Hourglass" type="Node2D" groups=["Actor"]]
script = ExtResource( 1 )

[node name="TimeSlow" type="Area2D" parent="." groups=["Damage"]]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="TimeSlow"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="Spin" type="AnimationPlayer" parent="."]
autoplay = "Spin"
anims/RESET = SubResource( 2 )
anims/Spin = SubResource( 3 )

[node name="Particles2D" type="Particles2D" parent="."]
amount = 128
lifetime = 3.0
visibility_rect = Rect2( -400, -400, 800, 800 )
process_material = SubResource( 4 )

[node name="Phase" type="AnimationPlayer" parent="."]
autoplay = "Phase"
anims/Phase = SubResource( 7 )
anims/RESET = SubResource( 8 )

[connection signal="area_entered" from="TimeSlow" to="." method="_on_TimeSlow_area_entered"]
[connection signal="area_exited" from="TimeSlow" to="." method="_on_TimeSlow_area_exited"]
